tests/negative/neg_pr1110c_remove_constant.safe
-- Test: neg_pr1110c_remove_constant
-- Description: `remove(m, key)` requires a writable map target.
-- Clause: SAFE@468cf72:docs/PR11.x-series-proposed.md#pr1110c-built-in-map-of-k-v
-- Expected: REJECT

package neg_pr1110c_remove_constant

   values : constant map of (integer, integer)
   prior : optional integer = remove (values, 1)
